--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
     <title>3-column preview card component</title>
   </head>
-  <body id="root">
+  <body>
+    <main id="root" class="main-content"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
